# hgb

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.centos6  README.md  build.sh  cargo.sh  cbindgen.toml  figures_latex.md  header.tex  image_wrapper.rb  image_wrapper.sh  make.sh  rest.ipynb
.github/workflows/: ci.yml  publish.yml  rust.yml
src/: alignment.rs  alignment_old.rs  bed.rs  better_index.rs  binary.rs  biniter.c  buffer.rs  buffered_server.rs  builder.rs  checker_index.rs  color.rs  compression.rs  dump.rs  features.rs  gff.rs  header.rs  index.rs  lib.rs  light_header.rs  main.rs  range.rs  reader.rs  rest_server.rs  server.rs  simple_bam_buffer.rs  simple_buffer.rs  subcommands.rs  twopass_alignment.rs  vis.rs  vis_orig.rs  writer.rs
static/: index.html
test/: hghead.bed  input.bed  input1.bam  input1.bam.bai  input2.bam.bai  test.bai  test.bed  test.txt
