[package]
name = "hgb"
version = "0.1.0"
authors = ["6br <tfdvrt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ghi"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hgb"
path = "src/main.rs"

[dependencies]
actix-web = { version = "3.0.1", optional = true }
actix-rt = { version = "1.1.1", optional = true }
actix-files = { version = "0.3", optional = true }
actix-cors = { version = "0.3", optional = true }
bio-types = { git = "https://github.com/6br/rust-bio-types", branch= "alignment_fix" }
bam = { git = "https://github.com/6br/bam" }
#bio = { git = "https://github.com/rust-bio/rust-bio" }
csv = "1.1.3"
bitpacking = "0.8.2"
byteorder = "1.3.4"
env_logger = "0.7.1"
flate2 = "1.0.14"
genomic_range = { git = "https://github.com/6br/genomic_range" }
itertools = "0.9.0"
libflate = "1.0.0"
log = "0.4.8"
multimap = "0.8.2"
num-format = "0.4.0"
numpress = "1.1.0"
plotters = { version = "0.2.15", default-features = false, features = ["svg", "line_series","image_encoder", "ttf", "histogram"] }
rand = "0.7.3"
rayon = "1.4.0"
regex = "1.3.7"
serde = "1.0.110"
serde_json = "1.0.57"
serde_derive = { version = "1.0.116", optional = true }
serde_yaml = "0.8.12"
udon = { git = "https://github.com/ocxtal/udon", rev = "eeb5ad8" }
vbyte = { git = "https://github.com/6br/vbyte" }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
#version = "3.0.0-beta.1"
rev = "d67c3bb7d3e4d7137419ae40f05fbf233e6ec581"
default-features = false

# Cherry-pick the features you'd like to use
features = [ "suggestions", "color", "std" ]

[features]
default = ["web"]
web = ["actix-web", "actix-rt", "actix-cors", "actix-files", "serde_derive"]

[profile.release]
codegen-units = 1
lto = true
overflow-checks = false
debug = true
